# ev3dev-swb

./: brickstrap_setup.md  docker_instruction.md  docs.md  gdb  install.sh  todo.md  vm_setup.md
examples/: Makefile
lego_fw/: CMakeLists.txt
lego_fw/src/: CMakeLists.txt  CraneControl.hpp  CraneData.hpp  EventLoop.hpp  Logger.hpp  Logger_test.cpp  Poller.hpp  Safe.hpp  State.hpp  demo.cpp  draft.cpp  pidtest.cpp
lego_fw/test/: CMakeLists.txt  test_crane_data.cpp  test_event_loop.cpp  test_poller.cpp  test_state.cpp
pidtest/: CMakeLists.txt  \  arm-linux-gnueabi.cmake  docker_build.sh  ev3-rootfs-cross.env  pidtest.cpp
raport/: raport.tex
scripts/: docker_build.sh  install_brickstrap.sh  install_deps_in_shell.sh  install_docker.sh  install_docker_16_04.sh  prepare_cmake_env.sh
